Migrate source code to Java 11